# turn-taker

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  deploy.sh
include/: config.h  ssd1306.h
lib/ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.h
src/: main.c  ssd1306.c
turn-taker/turn-taker/turn-taker/: fp-info-cache  turn-taker-B_Cu.gbr  turn-taker-B_Mask.gbr  turn-taker-B_Paste.gbr  turn-taker-B_Silkscreen.gbr  turn-taker-BodyPocket.stl  turn-taker-Edge_Cuts.gbr  turn-taker-F_Cu.gbr  turn-taker-F_Mask.gbr  turn-taker-F_Paste.gbr  turn-taker-F_Silkscreen.gbr  turn-taker-NPTH.drl  turn-taker-PTH.drl  turn-taker-base.stl  turn-taker-job.gbrjob  turn-taker.FCStd  turn-taker.kicad_pcb  turn-taker.kicad_prl  turn-taker.kicad_pro  turn-taker.kicad_sch  turn-taker.step
